# rustvideoplatform

./: .gitignore  Cargo.toml  Dockerfile  MEILISEARCH_SCHEMA.md  build.rs  database_schema.cql  database_schema.sql  database_schema.surql  filter_css.py  package-lock.json  package.json  purgecss.config.cjs  schema.surql
.sqlx/: query-020caa99f64f7260ff2b6d19ebcdacf320ee4ef5439d57886b2b0b4ecacdee42.json  query-11aac44f6cda5f83d76bb950e365d5729ea28c2733be7fe5ca207d1b8d832fdb.json  query-170b3534807b57a1c41870188bf69c9c78607d350740374513d74f38415b764f.json  query-1fe4e2392d111ce3f449737fc4fe9bf1ef7689a8828a3b21d729d49c44ee05c9.json  query-2ba332e4b5791519da4acba3dda231a9e09d9917756ebe49307c5be452cd6b1f.json  query-2ce3818c1f3369fb9106ad5a75dd7fcec3fbb037ec632a41c93801aa3a73d4af.json  query-32dfcbb9c50721c433c77235cb9944b483cdf095d07dbc49e875f57b11a119df.json  query-34fea04300e804329995a5966dcfc7a88bb66f0809bdd6094a305b91e401393e.json  query-3b57eaec444de11f471b2fa1c2f52c8bebfd5977412ee5045d49361d5e4971ab.json  query-479af27bfb4fd6f0214e562edcb224b40c3d70d571becea5ee3177f775685d40.json  query-5f13e2f77eb42692102043251c44c35f8fb1e58e9e6192e0ceb48c81e53741a9.json  query-62159d91592f51fb809d3bd5ebf272ba37ff4d629deb87898a83bdfc47cf100a.json  query-6831474682f862e7c37488d271bf067a0dad4288aba3446886fd7775e28f4f83.json  query-6b3a34befc6ef441ba20b17c560c8796d6978dd3ab79e8ff31f516c806c51a40.json  query-6c4dfb219bfb1105e3d1de90ca4d3a50ac83e04b9cf4a218d0c1293b9daa81b1.json  query-6e79110e085f4cdc4dac2c7e6d24a62ba72f6416f9a67e2d44d173912b589068.json  (+27 more)
example-deployment/: config.json  (+2 more)
(+108 files in other folders)
