[package]
name = "rustvideoplatform"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
mimalloc = { version = "*", features = ["secure"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8", features = ["multipart", "json"] }
tower = "*"
tower-http = { version = "*", features = ["fs"] }
memory-serve = "1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json"] }
askama = { version = "0.15", features = ["serde_json"] }
serde_json = "*"
minify-html-onepass = "0.18"
chrono = "0.4"
ahash = "*"
argon2 = "0.5"
rand = "0.10"
meilisearch-sdk = "0.32"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
ttf2woff2 = { version = "0.10", default-features = false }
totp-rs = { version = "5", features = ["qr", "otpauth"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
url = "2"
base32 = "0.4"
